name:                berry-name-generator
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/nicolasbrugneaux/berry-name-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Brugneaux
maintainer:          nicolas.brugneaux@gmail.com
copyright:           2015 Nicolas Brugneaux
build-type:          Simple
cabal-version:       >=1.10

executable berry-name-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.1,
                       network >= 2.6
